fixed before and overflow

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -42,12 +42,13 @@
       &::before {
         content: "+1 234 555-55-55";
         position: relative;
-        top: 50%;
-        transform: translate(-100%, -50%);
+        bottom: 50%;
+        transform: translate(-50%, -50%);
 
         display: block;
         width: max-content;
-        padding-right: 20px;
+        margin-top: 40px;
+        padding-right: 180px;
         font-weight: 700;
         font-size: 12px;
         line-height: 16px;
